--- a/app/templates/html/menu/vyberobjednavek.html
+++ b/app/templates/html/menu/vyberobjednavek.html
@@ -15,6 +15,9 @@ Statistika
             <a href="{{ url_for('view_statistika_page') }}">Statistika</a>
             <a href="{{ url_for('view_prehled_uzivatelu_page') }}">Uživatelé</a>
             {% endif %}
+            {% if prihlaseny.nazev == 'zamestnanec' %}
+            <a href="{{ url_for('view_pridat_produkt') }}">Přidat produkt</a>
+            {% endif %}
         </nav>
     </div>
 
