--- a/app/templates/html/neprihlaseny_uzivatel.html
+++ b/app/templates/html/neprihlaseny_uzivatel.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <div id="restaurantTitle">
-    <h2>Pro zobrazení nabídky se první přihlašte</h2>
+    <h2>Pro zobrazení nabídky se první přihlaste</h2>
 </div>
 
 
